# karpathy-gpt-2

./: input.txt.1  play.ipynb  pyproject.toml  train_gpt2.py
