[project]
name = "gpt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "hf-xet>=1.0.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
]
